ArtyomScheredin_HW1 (#6)
* Implement Dao

* Fix codestyle

* Fix codestyle

* Add memsegment support

* Change namings

* Made based on the MemorySegment

* Fix codestyle

* Fix codestyle

Co-authored-by: Artyom Drozdov <artyomcool2@gmail.com>