@@ -19,15 +19,29 @@ dependencies {
     errorprone 'com.google.errorprone:error_prone_core:2.11.0'
     checkstyle 'com.puppycrawl.tools:checkstyle:9.3'
 
+    //implementation 'jdk.incubator.foreign'
+
     // JUnit Jupiter test framework
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
+compileJava {
+    options.compilerArgs += ["--add-modules", "jdk.incubator.foreign"]
+}
+
+compileTestJava {
+    options.compilerArgs += ["--add-modules", "jdk.incubator.foreign"]
+}
+
 test {
     maxHeapSize = "64m"
     useJUnitPlatform()
+}
+
+test {
+    jvmArgs += ["--add-modules", "jdk.incubator.foreign"]
 }
 
 checkstyle {
